--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "project2",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mlaude1/SEIR_Project_2.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mlaude1/SEIR_Project_2/issues"
+  },
+  "homepage": "https://github.com/mlaude1/SEIR_Project_2#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "liquid-express-views": "^1.0.8",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.12",
+    "morgan": "^1.10.0"
   }
 }
